# axum-oauth-docker

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/: 20231101213222_initial.sql
src/: auth.rs  error.rs  main.rs  middlewares.rs  pages.rs
templates/: cookies.html  error.html  layout.html  login_cookie.html  profile.html
