[package]
name = "axum-oauth-docker"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["headers", "macros"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["macros"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "chrono", "migrate"] }
oauth2 = "4.4.1"
uuid = { version = "1.3", features = ["v4"] }
dotenvy = "0.15"
constant_time_eq = "0.3"
anyhow = "1.0"
thiserror = "1.0"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
reqwest = "0.11.22"
tracing = "0.1.40" 
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]} 
tower-http = { version = "0.4.4", features = ["trace"] }
